data/derived/comb/progs/unify/prog1026.ml.out
Characters 42-43:
  let _ = pipe [(fun x -> x); (fun x -> x)] 4;;
                                            ^
Error: This expression has type int but an expression was expected of type
         'a -> 'a
